# asterwise-python

./: .gitignore  .openapi-generator-ignore  README.md  pyproject.toml
.openapi-generator/: FILES
asterwise/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
docs/: AdvancedApi.md  ApiResponseAshtakavargaResponse.md  ApiResponseAshtottariEndpointResponse.md  ApiResponseAshtottariResponse.md  ApiResponseChartResponse.md  ApiResponseChoghadiyaResponse.md  ApiResponseCompatibilityResponse.md  ApiResponseDashaEndpointResponse.md  ApiResponseDivisionalResponse.md  ApiResponseDoshaEndpointResponse.md  ApiResponseDoshaResponse.md  ApiResponseGeocodeResponse.md  ApiResponseHoraResponse.md  ApiResponseLifePathResponse.md  ApiResponseListDashaPeriod.md  ApiResponseLuckyNumbersApiResponse.md  ApiResponseMatchmakingResponse.md  ApiResponseNatalResponse.md  ApiResponseNumberMeaningResponse.md  ApiResponseNumerologyProfileResponse.md  ApiResponsePanchangaCalendarResponse.md  ApiResponsePanchangaResponse.md  ApiResponsePersonalYearResponse.md  ApiResponseRahuKaalResponse.md  ApiResponseSadeSatiResponse.md  ApiResponseStrengthResponse.md  ApiResponseTimezoneResponse.md  ApiResponseTransitsResponse.md  ApiResponseYogaEndpointResponse.md  ApiResponseYogaResponse.md  ApiResponseYoginiEndpointResponse.md  ApiResponseYoginiResponse.md  AshtakavargaRequest.md  AshtakavargaResponse.md  AshtottariEndpointResponse.md  AshtottariPeriod.md  AshtottariRequest.md  AshtottariResponse.md  Astrology0Api.md  AstrologyApi.md  (+116 more)
test/: test_advanced_api.py  test_api_response_ashtakavarga_response.py  test_api_response_ashtottari_endpoint_response.py  test_api_response_ashtottari_response.py  test_api_response_chart_response.py  test_api_response_hora_response.py  (+150 more)
(+160 files in other folders)
