[project]
name = "asterwise"
version = "0.1.0"
description = "Official Python SDK for the Asterwise Vedic Astrology API"
authors = [
  {name = "Asterwise", email = "support@asterwise.com"},
]
license = { text = "Commercial" }
readme = "README.md"
keywords = [
  "vedic astrology",
  "jyotish",
  "astrology api",
  "kundli",
  "horoscope",
  "numerology",
  "dasha",
  "panchanga",
  "matchmaking",
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
  "urllib3 (>=2.1.0,<3.0.0)",
  "python-dateutil (>=2.8.2)",
  "pydantic (>=2.11)",
  "typing-extensions (>=4.7.1)",
]

[project.urls]
Homepage = "https://asterwise.com"
Documentation = "https://docs.asterwise.com"
Repository = "https://github.com/asterwise/asterwise-python"
"Bug Tracker" = "https://github.com/asterwise/asterwise-python/issues"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">= 7.2.1"
pytest-cov = ">= 2.8.1"
mypy = ">= 1.5"
types-python-dateutil = ">= 2.8.19.14"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["asterwise"]
warn_unused_configs = true
warn_redundant_casts = true
strict_equality = true
check_untyped_defs = true
